Updated README file

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./app.js"></script>
   <title>Studio Ghibli Fun</title>
 </head>
 
 <body>
+  <h1>Studio Ghibli Fun</h1>
 
 </body>
 
