Dropdown menu done.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="./app.js"></script>
+  <script defer src="./app.js"></script>
   <title>Studio Ghibli Fun</title>
 </head>
 
 <body>
-  <h1>Studio Ghibli Fun</h1>
+  <!-- Home page div -->
+  <div>
+    <h1>Studio Ghibli Fun</h1>
+    <button>Character Lookup</button>
+  </div>
+  <div>
+    <!-- Character Lookup page -->
+    <h2>Character Lookup</h2>
+    <select name="select-character" id="select-character"></select>
+    <button>Submit</button>
+  </div>
 
 </body>
 
