--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
     <h1>Studio Ghibli Fun</h1>
     <button>Character Lookup</button>
   </div>
+  <!-- Character Lookup page -->
   <div>
-    <!-- Character Lookup page -->
     <h2>Character Lookup</h2>
     <select name="select-character" id="select-character"></select>
-    <button>Submit</button>
+    <!-- <button id="submit">Submit</button> -->
+    <input type="button" onclick="display()" value="Submit">
   </div>
+  <!-- Character Lookup Results  -->
+  <div id="resultsDiv">
+    <div><span class="heading">Name: </span> <span id="name"></span></div>
+    <div><span class="heading">Gender: </span> <span id="gender"></span></div>
+    <div><span class="heading">Eye Color:<span id="eyeColor"></span></div>
 
 </body>
 
