--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Character Lookup</h2>
     <select name="select-character" id="select-character"></select>
     <!-- <button id="submit">Submit</button> -->
-    <input type="button" onclick="display()" value="Submit">
+    <input type="button" id="submit" value="Submit">
   </div>
   <!-- Character Lookup Results  -->
   <div id="resultsDiv">
