Fixed span issue

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div id="resultsDiv">
     <div><span class="heading">Name: </span> <span id="name"></span></div>
     <div><span class="heading">Gender: </span> <span id="gender"></span></div>
-    <div><span class="heading">Eye Color:<span id="eyeColor"></span></div>
+    <div><span class="heading">Eye Color:</span> <span id="eyeColor"></span></div>
 
 </body>
 
