--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
   <!-- Home page div -->
   <div id="homePage">
     <h1 id="title">Studio Ghibli Fun</h1>
-    <button>Character Lookup</button>
+    <button onclick="takeMeToDiv()">Character Lookup</button>
   </div>
-  <!-- Character Lookup page -->
-  <div id="characterPage">
-    <h1 id="characterLookup">Character Lookup</h1>
-    <select name="select-character" id="select-character"></select>
-    <!-- <button id="submit">Submit</button> -->
-    <input type="button" id="submit" value="Submit">
 
-    <!-- Character Lookup Results  -->
-    <div id="resultsDiv">
-      <div><span class="heading">Name: </span> <span id="name"></span></div>
-      <div><span class="heading">Gender: </span> <span id="gender"></span></div>
-      <div><span class="heading">Eye Color:</span> <span id="eyeColor"></span></div>
+  <!-- Whole Character Lookup page -->
+  <div id="characterPage">
+    <!-- Character Page Text div that has header one, select, submit and resultsDiv -->
+    <div id="characterPageText">
+      <h1 id="characterLookup">Character Lookup</h1>
+      <!-- selectAndSubmitDiv that has only the select and submit. -->
+      <div id="selectAndSubmitDiv">
+        <select name="select-character" id="select-character"></select>
+        <!-- <button id="submit">Submit</button> -->
+        <input type="button" id="submit" value="Submit">
+      </div>
+      <!-- Character Lookup Results  -->
+      <div id="resultsDiv">
+        <div><span class="heading">Name: </span> <span id="name"></span></div>
+        <div><span class="heading">Gender: </span> <span id="gender"></span></div>
+        <div><span class="heading">Eye Color: </span> <span id="eyeColor"></span></div>
+      </div>
     </div>
 </body>
 
