--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
   <script defer src="./app.js"></script>
   <title>Studio Ghibli Fun</title>
+  <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 </head>
 
 <body>
@@ -20,13 +22,13 @@
   </div>
 
   <!-- Whole Character Lookup page -->
-  <div id="characterPage">
+  <div data-aos="fade-up" id="characterPage">
     <!-- Character Page Text div that has header one, select, submit and resultsDiv -->
     <div id="characterPageText">
       <h1 id="characterLookup">Character Lookup</h1>
       <!-- selectAndSubmitDiv that has only the select and submit. -->
       <div id="selectAndSubmitDiv">
-        <select name="select-character" id="select-character"></select>
+        <select name="select-character" id="select-character" class="customSelect"></select>
         <!-- <button id="submit">Submit</button> -->
         <input type="button" id="submit" value="Submit">
       </div>
@@ -37,6 +39,8 @@
         <div><span class="heading">Eye Color: </span> <span id="eyeColor"></span></div>
       </div>
     </div>
+
+
 </body>
 
 </html>
