added scroll up icons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <div><span class="heading">Gender: </span> <span id="gender"></span></div>
         <div><span class="heading">Eye Color: </span> <span id="eyeColor"></span></div>
       </div>
+      <div id="scrollUp">
+        <img src="Assets\Images\scrollUpIcon.png" alt="scrollUpIcon id=" scrollUpIcon">
+        <img src="Assets\Images\totoroTransparent1.png" alt="totoroTransparent1" id="totoroTransparent1">
+      </div>
     </div>
 
 
