positioning of scroll up done

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         <div><span class="heading">Eye Color: </span> <span id="eyeColor"></span></div>
       </div>
       <div id="scrollUp">
-        <img src="Assets\Images\scrollUpIcon.png" alt="scrollUpIcon id=" scrollUpIcon">
-        <img src="Assets\Images\totoroTransparent1.png" alt="totoroTransparent1" id="totoroTransparent1">
+        <div id="scrollUpIcons">
+          <img src="Assets\Images\scrollUpIcon.png" alt="scrollUpIcon" id="scrollUpArrow">
+          <img src="Assets\Images\totoroTransparent1.png" alt="totoroTransparent1" id="totoroTransparent1">
+        </div>
+
       </div>
     </div>
 
