Scroll up button done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div><span class="heading">Eye Color: </span> <span id="eyeColor"></span></div>
       </div>
       <div id="scrollUp">
-        <div id="scrollUpIcons">
+        <div id="scrollUpIcons" onclick="takeMeHome()">
           <img src="Assets\Images\scrollUpIcon.png" alt="scrollUpIcon" id="scrollUpArrow">
           <img src="Assets\Images\totoroTransparent1.png" alt="totoroTransparent1" id="totoroTransparent1">
         </div>
