Added more metadata

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta property="og:image"
-    content="https://storage.googleapis.com/pb-portfolio/thumbnails/thumbnails/roll_the_dice_final.png" />
+    content="https://storage.googleapis.com/pb-portfolio/thumbnails/thumbnails/studio_ghibli_final.png" />
   <meta property="og:title" content="Studio Ghibli Fun" />
   <meta property="og:description" content="Lookup basic stats for your favorite Studio Ghibli characters." />
+  <meta name="image"
+    content="https://storage.googleapis.com/pb-portfolio/thumbnails/thumbnails/studio_ghibli_final.png" />
+  <meta name="title" content="Studio Ghibli Fun" />
+  <meta name="description" content="Lookup basic stats for your favorite Studio Ghibli characters." />
   <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
   <script defer src="./app.js"></script>
   <title>Studio Ghibli Fun</title>
-  <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+
 </head>
 
 <body>
