--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta property="og:image"
+  <meta charset="utf-8" />
+  <link rel="icon" href="https://i.imgur.com/xonsX9i.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:title" content="Only Yoga" />
+  <meta property="og:description" content="Keep track of your yoga practice." />
+  <meta property="og:image" content="https://i.imgur.com/2grGAnf.png" />
+  <meta name="twitter:card" content="https://i.imgur.com/2grGAnf.png" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Keep track of your yoga practice." />
+  <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+  <!-- <meta property="og:image"
     content="https://storage.googleapis.com/pb-portfolio/thumbnails/thumbnails/studio_ghibli_final.png" />
   <meta property="og:title" content="Studio Ghibli Fun" />
   <meta property="og:description" content="Lookup basic stats for your favorite Studio Ghibli characters." />
@@ -11,7 +20,7 @@
     content="https://storage.googleapis.com/pb-portfolio/thumbnails/thumbnails/studio_ghibli_final.png" />
   <meta name="title" content="Studio Ghibli Fun" />
   <meta name="description" content="Lookup basic stats for your favorite Studio Ghibli characters." />
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="website" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@300;400;500;600;700&display=swap"
