--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 
   <meta property="og:image"
     content="https://storage.googleapis.com/pb-portfolio/thumbnails/thumbnails/studio_ghibli_final.png" />
